# rawrag

./: readme.md
api/: .env.example  .gitignore  constants.py  main.py  migration.py  pyproject.toml
api/core/: db.py  logger.py  settings.py
api/feature/: crud.py  rag.py  routes.py  schemas.py
web/: api.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/[id]/: page.tsx
web/client/: index.ts  sdk.gen.ts  types.gen.ts
web/components/: chat-interface.tsx  start-new-chat.tsx
web/lib/: utils.ts
